--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @machine.location %> Vending Machine</h1>
 
 <% @snacks.each do |snack| %>
-  <%= snack.name %>
-   <%= snack.price %>
+  <p>Name: <%= snack.name %></p>
+   <p>Price: $<%= snack.price %></p>
   <% end %>
