--- a/app/views/snacks/show.html.erb
+++ b/app/views/snacks/show.html.erb
@@ -1,3 +1,11 @@
 <h1> <%= @snack.name  %></h1>
 
 <%= @snack.price %>
+
+<h3>Locations</h3>
+
+<%= @snack.machines.each do |machine| %>
+  <p>Location: <%= machine.location %></p>
+  <p>Average Price: <%= machine.location %></p>
+  <p>Kinds Of Snacks: <%= machine.item_count %></p>
+<% end %>
